--- a/src/uiComponents/static/fonts/iconfont.css
+++ b/src/uiComponents/static/fonts/iconfont.css
@@ -1,289 +1,377 @@
 @font-face {
-    font-family: "iconfont";
-    /* Project id  */
-    src: url('iconfont.ttf?t=1624324558097') format('truetype');
+  font-family: "iconfont"; /* Project id  */
+  src: url('iconfont.ttf?t=1627008375717') format('truetype');
 }
 
 .iconfont {
-    font-family: "iconfont" !important;
-    font-size: 16px;
-    font-style: normal;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  font-family: "iconfont" !important;
+  font-size: 16px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-arrow-up-filling:before {
+  content: "\e688";
+}
+
+.icon-arrow-down-filling:before {
+  content: "\e689";
+}
+
+.icon-arrow-left-filling:before {
+  content: "\e68a";
+}
+
+.icon-arrow-right-filling:before {
+  content: "\e68b";
+}
+
+.icon-comment-filling:before {
+  content: "\e68c";
+}
+
+.icon-clock-filling:before {
+  content: "\e68d";
+}
+
+.icon-delete-filling:before {
+  content: "\e68e";
+}
+
+.icon-favorite-filling:before {
+  content: "\e68f";
+}
+
+.icon-help-filling:before {
+  content: "\e690";
+}
+
+.icon-filter-filling:before {
+  content: "\e691";
+}
+
+.icon-file-common-filling:before {
+  content: "\e692";
+}
+
+.icon-notification-filling:before {
+  content: "\e693";
+}
+
+.icon-user-filling:before {
+  content: "\e694";
+}
+
+.icon-setting-filling:before {
+  content: "\e695";
+}
+
+.icon-success-filling:before {
+  content: "\e696";
+}
+
+.icon-warning-filling:before {
+  content: "\e697";
+}
+
+.icon-map-filling:before {
+  content: "\e698";
+}
+
+.icon-prompt-filling:before {
+  content: "\e699";
+}
+
+.icon-meh-filling:before {
+  content: "\e69a";
+}
+
+.icon-cry-filling:before {
+  content: "\e69b";
+}
+
+.icon-home-filling:before {
+  content: "\e69c";
+}
+
+.icon-sorting:before {
+  content: "\e69d";
 }
 
 .icon-warning:before {
-    content: "\e601";
+  content: "\e601";
 }
 
 .icon-arrow-down-bold:before {
-    content: "\e602";
+  content: "\e602";
 }
 
 .icon-time:before {
-    content: "\e603";
+  content: "\e603";
 }
 
 .icon-user:before {
-    content: "\e604";
+  content: "\e604";
 }
 
 .icon-arrow-right-bold:before {
-    content: "\e605";
+  content: "\e605";
 }
 
 .icon-arrow-left-bold:before {
-    content: "\e606";
+  content: "\e606";
 }
 
 .icon-close-bold:before {
-    content: "\e607";
+  content: "\e607";
 }
 
 .icon-success:before {
-    content: "\e608";
+  content: "\e608";
 }
 
 .icon-select:before {
-    content: "\e609";
+  content: "\e609";
 }
 
 .icon-share:before {
-    content: "\e60a";
+  content: "\e60a";
 }
 
 .icon-sign-out:before {
-    content: "\e60b";
+  content: "\e60b";
 }
 
 .icon-arrow-up-bold:before {
-    content: "\e60c";
+  content: "\e60c";
 }
 
 .icon-help:before {
-    content: "\e60d";
+  content: "\e60d";
 }
 
 .icon-notification:before {
-    content: "\e60e";
+  content: "\e60e";
 }
 
 .icon-more:before {
-    content: "\e60f";
+  content: "\e60f";
 }
 
 .icon-map:before {
-    content: "\e610";
+  content: "\e610";
 }
 
 .icon-loading:before {
-    content: "\e611";
+  content: "\e611";
 }
 
 .icon-elipsis:before {
-    content: "\e612";
+  content: "\e612";
 }
 
 .icon-good:before {
-    content: "\e613";
+  content: "\e613";
 }
 
 .icon-home:before {
-    content: "\e614";
+  content: "\e614";
 }
 
 .icon-search:before {
-    content: "\e615";
+  content: "\e615";
 }
 
 .icon-hide:before {
-    content: "\e616";
+  content: "\e616";
 }
 
 .icon-error:before {
-    content: "\e617";
+  content: "\e617";
 }
 
 .icon-calendar:before {
-    content: "\e618";
+  content: "\e618";
 }
 
 .icon-comment:before {
-    content: "\e619";
+  content: "\e619";
 }
 
 .icon-link:before {
-    content: "\e61a";
+  content: "\e61a";
 }
 
 .icon-add-circle:before {
-    content: "\e61b";
+  content: "\e61b";
 }
 
 .icon-close:before {
-    content: "\e61c";
+  content: "\e61c";
 }
 
 .icon-ashbin:before {
-    content: "\e61d";
+  content: "\e61d";
 }
 
 .icon-chart-pie:before {
-    content: "\e61e";
+  content: "\e61e";
 }
 
 .icon-fabulous:before {
-    content: "\e61f";
+  content: "\e61f";
 }
 
 .icon-favorite:before {
-    content: "\e620";
+  content: "\e620";
 }
 
 .icon-data-view:before {
-    content: "\e621";
+  content: "\e621";
 }
 
 .icon-lock:before {
-    content: "\e622";
+  content: "\e622";
 }
 
 .icon-unlock:before {
-    content: "\e623";
+  content: "\e623";
 }
 
 .icon-add-bold:before {
-    content: "\e624";
+  content: "\e624";
 }
 
 .icon-telephone:before {
-    content: "\e625";
+  content: "\e625";
 }
 
 .icon-edit:before {
-    content: "\e626";
+  content: "\e626";
 }
 
 .icon-refresh:before {
-    content: "\e627";
+  content: "\e627";
 }
 
 .icon-setting:before {
-    content: "\e628";
+  content: "\e628";
 }
 
 .icon-browse:before {
-    content: "\e629";
+  content: "\e629";
 }
 
 .icon-scanning:before {
-    content: "\e62a";
+  content: "\e62a";
 }
 
 .icon-file-common:before {
-    content: "\e62b";
+  content: "\e62b";
 }
 
 .icon-upload:before {
-    content: "\e62c";
+  content: "\e62c";
 }
 
 .icon-history:before {
-    content: "\e62d";
+  content: "\e62d";
 }
 
 .icon-operation:before {
-    content: "\e62e";
+  content: "\e62e";
 }
 
 .icon-customer-service:before {
-    content: "\e62f";
+  content: "\e62f";
 }
 
 .icon-mic:before {
-    content: "\e630";
+  content: "\e630";
 }
 
 .icon-column-vertical:before {
-    content: "\e631";
+  content: "\e631";
 }
 
 .icon-column-horizontal:before {
-    content: "\e632";
+  content: "\e632";
 }
 
 .icon-skip:before {
-    content: "\e633";
+  content: "\e633";
 }
 
 .icon-import:before {
-    content: "\e634";
+  content: "\e634";
 }
 
 .icon-work:before {
-    content: "\e635";
+  content: "\e635";
 }
 
 .icon-bad:before {
-    content: "\e636";
+  content: "\e636";
 }
 
 .icon-filter:before {
-    content: "\e637";
+  content: "\e637";
 }
 
 .icon-qrcode:before {
-    content: "\e638";
+  content: "\e638";
 }
 
 .icon-scanning1:before {
-    content: "\e639";
+  content: "\e639";
 }
 
 .icon-secure:before {
-    content: "\e63a";
+  content: "\e63a";
 }
 
 .icon-fav:before {
-    content: "\e63b";
+  content: "\e63b";
 }
 
 .icon-wifi:before {
-    content: "\e63c";
+  content: "\e63c";
 }
 
 .icon-scan1:before {
-    content: "\e63d";
+  content: "\e63d";
 }
 
 .icon-refresh2:before {
-    content: "\e63e";
+  content: "\e63e";
 }
 
 .icon-home2:before {
-    content: "\e63f";
+  content: "\e63f";
 }
 
 .icon-add:before {
-    content: "\e640";
+  content: "\e640";
 }
 
 .icon-noselect:before {
-    content: "\e641";
+  content: "\e641";
 }
 
 .icon-time1:before {
-    content: "\e642";
+  content: "\e642";
 }
 
 .icon-help1:before {
-    content: "\e643";
+  content: "\e643";
 }
 
 .icon-faild:before {
-    content: "\e644";
+  content: "\e644";
 }
 
 .icon-success1:before {
-    content: "\e645";
+  content: "\e645";
 }
+
