--- a/src/uiComponents/style/common.less
+++ b/src/uiComponents/style/common.less
@@ -82,6 +82,12 @@
   align-content: center;
   align-items: center;
 }
+.flexTop {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: baseline;
+}
 .textEllipsis {
   overflow: hidden;
   white-space: nowrap;
