--- a/src/uiComponents/style/common.less
+++ b/src/uiComponents/style/common.less
@@ -93,3 +93,46 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
+html {
+  font-family: Arial, Verdana, Sans-serif;
+  transition: width 0.3s ease-in;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
+  &.dialog {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    body {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+  }
+}
+body {
+  width: 100%;
+  -webkit-tap-highlight-color: transparent;
+  background-color: @lightGrey;
+}
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol,
+li {
+  padding: 0;
+  margin: 0;
+}
+ul,
+ol {
+  list-style: none;
+}
