--- a/src/uiComponents/style/common.less
+++ b/src/uiComponents/style/common.less
@@ -1,5 +1,8 @@
 @base: 23.44rem;
 
+@font: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB",
+  "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
+
 @red: #ff0033;
 @green: #07c160;
 @yellow: #ff976a;
@@ -11,6 +14,11 @@
 @lightBlack: #333333;
 @white: #ffffff;
 @baseColor: @white;
+@transparent: transparent;
+
+@baseBoxShadow: 0 (2 / @base) (4 / @base) rgba(0, 0, 0, 0.12),
+  0 0 (6 / @base) rgba(0, 0, 0, 0.04);
+@easyboxshadow:0 (2/@base) (12/@base) 0 rgba(0, 0, 0, 0.1);
 
 @paddingLeft: (10 / @base);
 @paddingRight: (10 / @base);
@@ -95,7 +103,7 @@
 }
 
 html {
-  font-family: Arial, Verdana, Sans-serif;
+  font-family: @font;
   transition: width 0.3s ease-in;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -115,8 +123,9 @@ html {
 }
 body {
   width: 100%;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: @transparent;
   background-color: @lightGrey;
+  color: @lightBlack;
 }
 body,
 h1,
